load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

genrule(
    name = "seccomp",
    srcs = glob(["*.c"]),
    outs = ["seccomp.h"],
    cmd = 'ARCH= CC="$(CC) $(CC_FLAGS)" $(location seccomp.sh) $@ $(SRCS)',
    toolchains = ["@bazel_tools//tools/cpp:toolchain_type"],
    tools = ["seccomp.sh"],
)

cc_binary(
    name = "passt",
    srcs = ["passt.c"],
    deps = [":lib"],
)

cc_library(
    name = "lib",
    srcs = [
        "arch.c",
        "arp.c",
        "checksum.c",
        "conf.c",
        "dhcp.c",
        "dhcpv6.c",
        "epoll_ctl.c",
        "flow.c",
        "fwd.c",
        "icmp.c",
        "igmp.c",
        "inany.c",
        "iov.c",
        "ip.c",
        "isolation.c",
        "lineread.c",
        "log.c",
        "migrate.c",
        "mld.c",
        "ndp.c",
        "netlink.c",
        "packet.c",
        "pasta.c",
        "pcap.c",
        "pif.c",
        "repair.c",
        "tap.c",
        "tcp.c",
        "tcp_buf.c",
        "tcp_splice.c",
        "tcp_vu.c",
        "udp.c",
        "udp_flow.c",
        "udp_vu.c",
        "util.c",
        "vhost_user.c",
        "virtio.c",
        "vu_common.c",
    ],
    hdrs = [
        "arch.h",
        "arp.h",
        "checksum.h",
        "conf.h",
        "dhcp.h",
        "dhcpv6.h",
        "epoll_ctl.h",
        "epoll_type.h",
        "flow.h",
        "flow_table.h",
        "fwd.h",
        "icmp.h",
        "icmp_flow.h",
        "inany.h",
        "iov.h",
        "ip.h",
        "isolation.h",
        "lineread.h",
        "linux_dep.h",
        "log.h",
        "migrate.h",
        "ndp.h",
        "netlink.h",
        "packet.h",
        "passt.h",
        "pasta.h",
        "pcap.h",
        "pif.h",
        "repair.h",
        "seccomp.h",
        "siphash.h",
        "tap.h",
        "tcp.h",
        "tcp_buf.h",
        "tcp_conn.h",
        "tcp_internal.h",
        "tcp_splice.h",
        "tcp_vu.h",
        "udp.h",
        "udp_flow.h",
        "udp_internal.h",
        "udp_vu.h",
        "util.h",
        "vhost_user.h",
        "virtio.h",
        "vu_common.h",
    ],
    copts = [
        "-Wno-unknown-attributes",
        "-Wno-c99-designator",
    ],
    defines = [
        "_GNU_SOURCE",
        'VERSION=\\"bazel\\"',
        "PAGE_SIZE=4096",
        "HAS_GETRANDOM",
        "DUAL_STACK_SOCKETS=1",
        "VIRTIO_RING_NO_LEGACY",
    ],
)
